# FIPlump-RL

./: .gitignore  PLUMP_ENV.py  PLUMP_RL.ipynb  README.md  main.py  old_notebook.ipynb  plump.ipynb  pyproject.toml
checkpoints/: dqn.pt
legacy/: PLUMP_ENV.py  PlumpEnv.py  README.md  Utilis.py  advice.txt  test.ipynb
legacy/Utilis/: Card.py  CardTest.ipynb  Deck.py  Hand.py  Hearts.py  Player.py  Plump.py  Trick.py
plump_rl/: __init__.py  cards.py  encoding.py  env.py  policies.py  tournament.py
plump_rl/training/: dqn.py  mlflow_utils.py  ppo.py
scripts/: eval_agent.py
tests/: test_env.py
