[project]
name = "plump"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.2",
    "numpy>=2.3.4",
    "torch>=2.4.1",
    "torchvision>=0.24.0",
    "tqdm>=4.66.5",
    "loguru>=0.7.2",
    "pandas>=2.3.3",
    "pytest>=9.0.0",
    "mlflow>=3.6.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
